==> tclayton003/RTOS/gs-sw-nanomind-a3200-command-and-management-sdk-2.12.0/lib/libembed/src/asf/avr8/drivers/i2c/i2c.c <==
#include <gs/embed/asf/drivers/i2c/i2c.h>
#include <gs/util/drivers/i2c/slave.h>
#include <avr/io.h>
#include <avr/interrupt.h>
#include <avr/pgmspace.h>
#include <util/twi.h>
#include <gs/embed/freertos.h>
#include <gs/util/error.h>
#include <gs/util/log.h>
#include <gs/util/stdio.h>
#include <gs/util/string.h>
#define CPU_CLK 8000000
#define BITRATE(speed)	((CPU_CLK / (2 * (uint32_t)speed) - 8) / (1 << ((TWSR & (_BV(TWPS0) | _BV(TWPS1))) << 1))) // (1 << (n << 1)) is 4^n

gs_error_t gs_avr_i2c_init(uint8_t handle, gs_avr32_i2c_mode_t mode, uint8_t addr, uint32_t bps) {

    /* Validate mode */
    if (mode != GS_AVR_I2C_MULTIMASTER && mode != GS_AVR_I2C_SLAVE)
        return GS_ERROR_NOT_SUPPORTED;
    //
    //    /* Initialise message queues */
    //    if (mode == GS_AVR_I2C_MULTIMASTER) {
    //        tx_queue = xQueueCreate(queue_len_tx, sizeof(i2c_frame_t *));
    //        if (tx_queue == 0)
    //            return GS_ERROR_ALLOC;
    //    }

    /* Set device mode */
    device_mode = mode;

    /* Setup hardware */
    i2c_speed = bps;
    i2c_addr = addr;

    TWCR = 0; // Reset TWI hardware
    TWBR = BITRATE(i2c_speed); // Set bit rate register
    TWAR = i2c_addr << 1; // Set slave address in the two wire address register
    TWCR = _BV(TWEA) | _BV(TWEN) | _BV(TWIE); // Enable acknowledge, twi and interrupts

    return GS_OK;

}

gs_error_t gs_i2c_master_transaction(uint8_t handle, uint8_t addr, const void * tx, size_t txlen, void * rx, size_t rxlen, int timeout_ms)
{
    /*
     * IMPLEMENT LOCK
     */
    if ((txlen == 0) || (txlen > I2C_MTU))
        return GS_ERROR_ARG;

    if (rxlen != 0) /* No master rx supported */
        return GS_ERROR_NOT_SUPPORTED;

    /* If device is in slave mode, it can only reply to master queries */
    if (device_mode == GS_AVR_I2C_SLAVE) {
        printf("Device is I2C slave, so it cannot do master transaction\r\n");
        return GS_ERROR_NOT_SUPPORTED;
    }

    tx_buf = tx;
    tx_len = txlen;
    tx_addr = addr;
    /* If bus is idle, send start condition */
    portENTER_CRITICAL();
    if (i2c_busy == 0) {
        //printf("TX-USR\r\n");
        last_tx = xTaskGetTickCount() + 1;
        TWCR |= _BV(TWSTA);
        i2c_busy = 1;
    }
    portEXIT_CRITICAL();

    /*
     * WAIT FOR A SEMAPHORE
     */

    return GS_OK;

}

gs_error_t gs_i2c_slave_set_response(uint8_t bus, const uint8_t * tx, size_t size)
{
    if (bus != i2c_slave_handle) {
        return GS_ERROR_HANDLE;
    }
    tx_buf = tx;
    tx_len = size;
    return GS_OK;
}
