==> tclayton003/RTOS/gs-sw-nanomind-a3200-command-and-management-sdk-2.12.0/lib/libembed/src/stm32/stm32l4/drivers/i2c/i2c.c <==
#include <gs/util/thread.h>
#include <gs/util/time.h>
#include <gs/util/sem.h>
#include <gs/util/check.h>
#include <gs/util/drivers/i2c/master.h>
#include <gs/util/drivers/i2c/slave.h>
#include <stm32l4xx_hal.h>
#include <math.h>
#include "../common.h"
#define GS_EMBED_I2C_NUMBER_OF_HANDLES 4
#define GS_EMBED_I2C_NUMBER_OF_HANDLES 3

gs_error_t gs_stm32l4_i2c_init(uint8_t device, const gs_i2c_bus_config_t * config)
{
    GS_CHECK_HANDLE((device >= 1) && (device <= GS_EMBED_I2C_NUMBER_OF_HANDLES));
    GS_CHECK_ARG(config->data_order_msb);
    GS_CHECK_ARG(config->addrbits == 7);
    GS_CHECK_ARG(config->mode == GS_I2C_MASTER ||config->mode == GS_I2C_MULTI_MASTER ||config->mode == GS_I2C_SLAVE);
    gs_stm32l4_i2c_handle_t * handle = &i2c_buses[device];

    if (handle->inuse) {
        return GS_ERROR_IN_USE;
    }

    IRQn_Type I2Cx_EV_IRQn, I2Cx_ER_IRQn;
    RCC_PeriphCLKInitTypeDef RCC_PeriphCLKInitStruct;
    switch (device) {
        case 1:
            /* Enable I2C1 clock */
            __HAL_RCC_I2C1_CLK_ENABLE();
            RCC_PeriphCLKInitStruct.PeriphClockSelection = RCC_PERIPHCLK_I2C1;
            RCC_PeriphCLKInitStruct.I2c1ClockSelection = RCC_I2C1CLKSOURCE_SYSCLK;
            HAL_RCCEx_PeriphCLKConfig(&RCC_PeriphCLKInitStruct);

            /* Link device */
            handle->instance = I2C1;
            I2Cx_EV_IRQn = I2C1_EV_IRQn;
            I2Cx_ER_IRQn = I2C1_ER_IRQn;
            break;
        case 2:
            /* Enable I2C2 clock */
            __HAL_RCC_I2C2_CLK_ENABLE();
            RCC_PeriphCLKInitStruct.PeriphClockSelection = RCC_PERIPHCLK_I2C2;
            RCC_PeriphCLKInitStruct.I2c2ClockSelection = RCC_I2C2CLKSOURCE_SYSCLK;
            HAL_RCCEx_PeriphCLKConfig(&RCC_PeriphCLKInitStruct);

            /* Link device */
            handle->instance = I2C2;
            I2Cx_EV_IRQn = I2C2_EV_IRQn;
            I2Cx_ER_IRQn = I2C2_ER_IRQn;
            break;
        case 3:
            /* Enable I2C3 clock */
            __HAL_RCC_I2C3_CLK_ENABLE();
            RCC_PeriphCLKInitStruct.PeriphClockSelection = RCC_PERIPHCLK_I2C3;
            RCC_PeriphCLKInitStruct.I2c3ClockSelection = RCC_I2C3CLKSOURCE_SYSCLK;
            HAL_RCCEx_PeriphCLKConfig(&RCC_PeriphCLKInitStruct);

            /* Link device */
            handle->instance = I2C3;
            I2Cx_EV_IRQn = I2C3_EV_IRQn;
            I2Cx_ER_IRQn = I2C3_ER_IRQn;
            break;
#if(GS_EMBED_I2C_NUMBER_OF_HANDLES == 4)
        case 4:
            /* Enable I2C4 clock */
            __HAL_RCC_I2C4_CLK_ENABLE();
            RCC_PeriphCLKInitStruct.PeriphClockSelection = RCC_PERIPHCLK_I2C4;
            RCC_PeriphCLKInitStruct.I2c4ClockSelection = RCC_I2C4CLKSOURCE_SYSCLK;
            HAL_RCCEx_PeriphCLKConfig(&RCC_PeriphCLKInitStruct);

            /* Link device */
            handle->instance = I2C4;
            I2Cx_EV_IRQn = I2C4_EV_IRQn;
            I2Cx_ER_IRQn = I2C4_ER_IRQn;
            break;
#endif
        default:
            return GS_ERROR_ARG;
    }


    uint32_t timing_reg;
    gs_error_t res = calculate_timing_register(config->bps, &timing_reg);
    if (res != GS_OK) {
        return res;
    }

    /* Configure speed */
    handle->instance->TIMINGR = timing_reg & 0xF0FFFFFF;
    /* Configure I2C Own Address */
    handle->instance->OAR1 = (I2C_OAR1_OA1EN | config->addr << 1);
    /* Enable wake up from stop mode */
    handle->instance->CR1 |= I2C_CR1_WUPEN;
    /* Enable error interrupts, NACK interrupt and STOP interrupt */
    handle->instance->CR1 |= I2C_CR1_ERRIE | I2C_CR1_NACKIE | I2C_CR1_STOPIE;
    /* Enable */
    handle->instance->CR1 |= I2C_CR1_PE;


    res = gs_sem_create(1, &i2c_buses[device].lock);
    if (res != GS_OK) {
        return res;
    }

    res = gs_sem_create(0, &i2c_buses[device].master_tx_isr_sync_sem);
    if (res != GS_OK) {
        return res;
    }

    /* NVIC for I2Cx */
    HAL_NVIC_SetPriority(I2Cx_ER_IRQn, GS_STM32L4_DEFAULT_ISR_PRIORITY, 0);
    HAL_NVIC_EnableIRQ(I2Cx_ER_IRQn);
    HAL_NVIC_SetPriority(I2Cx_EV_IRQn, GS_STM32L4_DEFAULT_ISR_PRIORITY, 0);
    HAL_NVIC_EnableIRQ(I2Cx_EV_IRQn);

    i2c_buses[device].inuse = true;
    i2c_buses[device].config = *config;
    i2c_buses[device].device = device;

    return GS_OK;
}

gs_error_t gs_i2c_slave_set_response(uint8_t device, const uint8_t * tx, size_t size)
{
    GS_CHECK_HANDLE((device >= 1) && (device <= GS_EMBED_I2C_NUMBER_OF_HANDLES));
    GS_CHECK_ARG(size <= 255);
    gs_stm32l4_i2c_handle_t * handle = &i2c_buses[device];
    if (handle->inuse) {
        if (handle->config.mode == GS_I2C_SLAVE) {
            handle->slave_tx_buf.buffer = (void *)tx;
            handle->slave_tx_buf.length = size;
            handle->slave_tx_buf.index = 0;
            /* Flush TX register */
            handle->instance->ISR |= I2C_ISR_TXE;
            /* Set first byte to be transmitted */
            handle->instance->TXDR = handle->slave_tx_buf.buffer[handle->slave_tx_buf.index];
            return GS_OK;
        }
    }
    return GS_ERROR_HANDLE;
}

gs_error_t gs_i2c_master_transaction(uint8_t device, uint8_t addr, const void * tx, size_t txlen, void * rx,
                                     size_t rxlen, int timeout_ms)
{
    GS_CHECK_HANDLE((device >= 1) && (device <= GS_EMBED_I2C_NUMBER_OF_HANDLES));
    bool tx_flag = txlen && tx;
    bool rx_flag = rxlen && rx;
    GS_CHECK_ARG((txlen <= 255) && (rxlen <= 255));
    GS_CHECK_ARG(tx_flag || rx_flag);
    uint8_t transfer_length = tx_flag ? txlen : rxlen;
    gs_stm32l4_i2c_handle_t * handle = &i2c_buses[device];
    GS_CHECK_HANDLE(handle->inuse);
    GS_CHECK_HANDLE(handle->config.mode == GS_I2C_MASTER || handle->config.mode == GS_I2C_MULTI_MASTER);

    if(timeout_ms < MIN_TIMEOUT) {
        timeout_ms = MIN_TIMEOUT;
    }

    gs_error_t res = gs_sem_wait(handle->lock, timeout_ms);
    if (res != GS_OK) {
        return res;
    }

    /* Makes sure, that semaphore is taken */
    while(gs_sem_wait(handle->master_tx_isr_sync_sem, 0) == GS_OK) {}

    handle->master_transfer_status = GS_ERROR_AGAIN;
    uint32_t time = gs_time_rel_ms();
    while((res == GS_OK) && (handle->master_transfer_status == GS_ERROR_AGAIN)) {
        /* Setup buffers*/
        if (tx_flag) {
            handle->master_tx_buf.buffer = (uint8_t *)tx;
            handle->master_tx_buf.length = txlen;
            handle->master_tx_buf.index = 0;
        }
        if (rx_flag) {
            handle->master_rx_buf.buffer = (uint8_t *)rx;
            handle->master_rx_buf.length = rxlen;
            handle->master_rx_buf.index = 0;
        }

        if (tx_flag) {
            /* If tx, set first byte to be transmitted */
            handle->instance->TXDR = handle->master_tx_buf.buffer[handle->master_tx_buf.index];
            handle->master_tx_buf.index++;
            handle->instance->CR1 |= I2C_CR1_TXIE; // Enable TX register empty
        } else {
            handle->instance->CR1 |= I2C_CR1_RXIE; // Enable RX register empty
        }

        handle->instance->CR1 |= I2C_CR1_TCIE; // Enable transfer complete flag
        handle->instance->CR2 &= ~(I2C_CR2_NBYTES_Msk | I2C_CR2_SADD_Msk); // Resetting address and length
        handle->instance->CR2 |= (transfer_length & 0x000000FF) << I2C_CR2_NBYTES_Pos; // Setting bytes to be sent
        handle->instance->CR2 |= (addr & 0x0000007F) << (I2C_CR2_SADD_Pos + 1); // Setting receiver address

        if(tx_flag) {
            handle->instance->CR2 &= ~I2C_CR2_RD_WRN; // Setting write direction
        } else {
            handle->instance->CR2 |= I2C_CR2_RD_WRN; // Setting read direction
        }
        handle->instance->CR2 |= I2C_CR2_START; // Sending start condition

        res = gs_sem_wait(handle->master_tx_isr_sync_sem, timeout_ms);

        if ((res == GS_OK) && (handle->master_transfer_status == GS_ERROR_AGAIN)) {
            uint32_t time_diff = gs_time_diff_ms(time, gs_time_rel_ms());
            if (time_diff >= (uint32_t)timeout_ms) {
                res = GS_ERROR_TIMEOUT;
            }
        }
    }
    if (res == GS_OK) {
        res = handle->master_transfer_status;
    }
    gs_sem_post(handle->lock);
    return res;
}
